<resources>
    <string name="app_name">SocialMedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    SignUp and Login -->
    <string name="hello">Hello</string>
    <string name="hello_login_massage">Let’s get new items by bartering !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="no_account_massage">Don’t Have Account?</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_SignUp_massage">Join us to communicate with your friends!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account_massage">Already Have Account?</string>

    <string name="user_registers_successfully">User Registers Successfully</string>
    <string name="user_logged_in_successfully">User Logged in Successfully</string>

    <string name="password_not_match">password and confirm password does not match</string>

    <!--  Profile -->
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="not_loggin_massage">oops,You aren\'t logged in</string>

    <string name="Logout">Logout</string>

    <!--  Add Posts -->
    <string name="new_post_hint"> What are you thinking about?</string>
    <string name="post_published_successfully">"Post published successfully"</string>


    <!-- Error massage -->
    <string name="required">Required</string>
    <string name="fill_required">please fill required</string>

</resources>